# knotgym

./: .gitignore  .gitmodules  README.md  pyproject.toml
baselines/: README.md
baselines/random/: random_policy.py
docs/: index.html
scripts/: mjc_interact.py  mjc_post_collect.py
src/knotgym/: __init__.py  envs.py  mjcf.py  specs.py  utils.py
src/knotgym/assets/: unknot7_float.xml
src/knotgym/assets/configurations/2025-02-21-16-27-59-unknot/: qpos.txt  render.npy  xpos.txt
src/knotgym/assets/configurations/2025-02-21-16-28-47-unknot/: qpos.txt  render.npy  xpos.txt
src/knotgym/assets/configurations/2025-02-26-10-23-46/: qpos.txt  render.npy  xpos.txt
src/knotgym/assets/configurations/2025-03-05-23-27-38/: gc.txt  qpos.txt  render.npy  xpos.txt
src/knotgym/assets/configurations/2025-03-05-23-47-29/: gc.txt  qpos.txt  render.npy  xpos.txt
src/knotgym/assets/configurations/2025-03-05-23-48-20/: gc.txt  qpos.txt  render.npy  xpos.txt
tests/: test_envs.py  test_mjcf.py
